--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gestor_tarea_f">
+
+        <!-- NUEVA pantalla XML (no es launcher) -->
+        <activity
+            android:name=".ui.recordatorio.RecordatorioActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Gestor_tarea_f" />
+
+        <!-- Pantalla principal (launcher) -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Gestor_tarea_f">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
+
 
 </manifest>
